--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pandas==1.5.3
-numpy==1.23.5
-scikit-learn==1.1.2
-joblib==1.2.0
-streamlit==1.15.0
-matplotlib==3.7.0
+streamlit==1.31.0
+pandas==2.2.0
+numpy==1.26.3
+scikit-learn==1.4.0
+seaborn==0.13.1
+matplotlib==3.8.2
+plotly==5.18.0
+joblib
